[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
norecursedirs = [
    "tests/kit"
]

[tool.ruff]
line-length = 111

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "snex"
dynamic = ["version"]
description = "snex - snippet extractor"
authors = [{ name = "Joachim Bargsten", email = "jw@bargsten.org" }]
dependencies = [
    "requests",
    "pyyaml",
    "more-itertools",
    "click>=8.0.0",
    "pyyaml>=5.4.1",
    "requests>=2.26.0",
    "chevron>=0.14.0",
    "Jinja2>=3.0.2",
    "pathspec"
]
license = { text = "MIT License" }

[project.urls]
homepage = "https://github.com/jwbargsten/snex"
repository = "https://github.com/jwbargsten/snex"
documentation = "https://github.com/jwbargsten/snex"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff"
]

[project.scripts]
snex = "snex.cli:main"

[tool.setuptools_scm]
