[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
norecursedirs = [
    "tests/kit"
]

[tool.ruff]
line-length = 111

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "snex"
dynamic = ["version"]
description = "snex - snippet extractor"
authors = [
    { name = "Joachim Bargsten", email = "jw@bargsten.org" }
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pyyaml",
    "more-itertools",
    "click>=8.0.0",
    "pyyaml",
    "requests",
    "chevron",
    "Jinja2",
    "pathspec"
]
# https://spdx.org/licenses/
license = { text = "Apache-2.0" }

[project.urls]
homepage = "https://github.com/jwbargsten/snex"
repository = "https://github.com/jwbargsten/snex"
documentation = "https://github.com/jwbargsten/snex"

[project.optional-dependencies]
dev = [
    "setuptools_scm",
    "pytest>=7",
    "ruff",
    "mypy",
]
build = [
    "snex[dev]",
    "build",
    "twine",
    "tomli",
    "check-manifest",
    "check-wheel-contents",
    "pyroma"
]

[project.scripts]
snex = "snex.cli:main"

[tool.setuptools_scm]
